provided style for sections

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <header></header>
-
+    <h1>this is my header</h1>
     <section></section>
     <h2>My New Website</h2>
     <img src="" alt="" />
-    <section></section>
+    <section>
+      <p></p>
+    </section>
     <h3>Conact Info</h3>
     <form>
       <input type="text" />
@@ -19,6 +21,7 @@
       <button>Sumbit</button>
     </form>
     <footer>
+      <h2>this is my footer</h2>
       <p>@2024 my website productions</p>
     </footer>
   </body>
