--- a/index.html
+++ b/index.html
@@ -3,25 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href=".assets/css/style.css" />
+    <title>First Website</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header></header>
-    <h1>this is my header</h1>
-    <section></section>
-    <h2>My New Website</h2>
-    <img src="" alt="" />
+    <header>
+      <h1>Contact Information Page</h1>
+      <nav>
+        <ul>
+          <li>Portfolio</li>
+          <li>Contact</li>
+          <li>github</li>
+        </ul>
+      </nav>
+    </header>
+
     <section>
-      <p></p>
+      <h2>My New Website</h2>
+      <img src="#" alt="" />
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel dicta illo
+        expedita sint ipsum, earum iste autem voluptate officia distinctio nam
+        reiciendis soluta commodi molestias facilis aperiam, totam quae
+        similique asperiores iusto esse! Quisquam qui ullam voluptatibus optio
+        vel, nobis tempora neque nostrum perferendis est saepe similique quas
+        itaque. Delectus excepturi eaque sunt laudantium ab sequi repudiandae
+        nulla consequatur laborum!
+      </p>
     </section>
-    <h3>Conact Info</h3>
-    <form>
-      <input type="text" />
-      <input type="text" />
-      <button>Sumbit</button>
-    </form>
+    <section>
+      <h3>Contact Info</h3>
+      <form>
+        <input type="text" />
+        <input type="text" />
+        <button>Submit</button>
+      </form>
+    </section>
+
     <footer>
-      <h2>this is my footer</h2>
+      <h2>This is my footer</h2>
       <p>@2024 my website productions</p>
     </footer>
   </body>
